tokenized the paragraph into words

--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -93,7 +93,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents=sent_tokenize(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl.\n",
+      "this is my second sentence!\n",
+      "Please subscribe.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sentence in documents:\n",
+    "    print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -104,13 +133,92 @@
        " 'Please subscribe.']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sent_tokenize(corpus)"
+    "documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import word_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello',\n",
+       " 'world',\n",
+       " ',',\n",
+       " 'This',\n",
+       " 'is',\n",
+       " 'my',\n",
+       " 'tokenization',\n",
+       " 'code',\n",
+       " 'example',\n",
+       " 'i',\n",
+       " 'am',\n",
+       " 'happy',\n",
+       " 'tp',\n",
+       " 'learn',\n",
+       " 'about',\n",
+       " 'machine',\n",
+       " 'learning',\n",
+       " ',',\n",
+       " 'nlp',\n",
+       " 'and',\n",
+       " 'dl',\n",
+       " '.',\n",
+       " 'this',\n",
+       " 'is',\n",
+       " 'my',\n",
+       " 'second',\n",
+       " 'sentence',\n",
+       " '!',\n",
+       " 'Please',\n",
+       " 'subscribe',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_tokenize(corpus)"
    ]
   },
   {
