--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus=\"\"\"Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl. \n",
+    "corpus=\"\"\"Hello world, This is my tokenization's code example i am happy tp learn about machine learning, nlp and dl. \n",
     "this is my second sentence! Please subscribe.\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl. \\nthis is my second sentence! Please subscribe.\\n'"
+       "\"Hello world, This is my tokenization's code example i am happy tp learn about machine learning, nlp and dl. \\nthis is my second sentence! Please subscribe.\\n\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl. \n",
+      "Hello world, This is my tokenization's code example i am happy tp learn about machine learning, nlp and dl. \n",
       "this is my second sentence! Please subscribe.\n",
       "\n"
      ]
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
      "text": [
       "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     /Users/parthabhang/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     },
     {
@@ -82,7 +82,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl.\n",
+      "Hello world, This is my tokenization's code example i am happy tp learn about machine learning, nlp and dl.\n",
       "this is my second sentence!\n",
       "Please subscribe.\n"
      ]
@@ -122,18 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Hello world, This is my tokenization code example i am happy tp learn about machine learning, nlp and dl.',\n",
+       "[\"Hello world, This is my tokenization's code example i am happy tp learn about machine learning, nlp and dl.\",\n",
        " 'this is my second sentence!',\n",
        " 'Please subscribe.']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "list"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words=word_tokenize(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +195,7 @@
        " 'is',\n",
        " 'my',\n",
        " 'tokenization',\n",
+       " \"'s\",\n",
        " 'code',\n",
        " 'example',\n",
        " 'i',\n",
@@ -212,13 +222,167 @@
        " '.']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_tokenize(corpus)"
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "world\n",
+      ",\n",
+      "This\n",
+      "is\n",
+      "my\n",
+      "tokenization\n",
+      "'s\n",
+      "code\n",
+      "example\n",
+      "i\n",
+      "am\n",
+      "happy\n",
+      "tp\n",
+      "learn\n",
+      "about\n",
+      "machine\n",
+      "learning\n",
+      ",\n",
+      "nlp\n",
+      "and\n",
+      "dl\n",
+      ".\n",
+      "this\n",
+      "is\n",
+      "my\n",
+      "second\n",
+      "sentence\n",
+      "!\n",
+      "Please\n",
+      "subscribe\n",
+      ".\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import wordpunct_tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello',\n",
+       " 'world',\n",
+       " ',',\n",
+       " 'This',\n",
+       " 'is',\n",
+       " 'my',\n",
+       " 'tokenization',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'code',\n",
+       " 'example',\n",
+       " 'i',\n",
+       " 'am',\n",
+       " 'happy',\n",
+       " 'tp',\n",
+       " 'learn',\n",
+       " 'about',\n",
+       " 'machine',\n",
+       " 'learning',\n",
+       " ',',\n",
+       " 'nlp',\n",
+       " 'and',\n",
+       " 'dl',\n",
+       " '.',\n",
+       " 'this',\n",
+       " 'is',\n",
+       " 'my',\n",
+       " 'second',\n",
+       " 'sentence',\n",
+       " '!',\n",
+       " 'Please',\n",
+       " 'subscribe',\n",
+       " '.']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordpunct_tokenize(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.tokenize import TreebankWordTokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer=TreebankWordTokenizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_tokenize=tokenizer.tokenize(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello', 'world', ',', 'This', 'is', 'my', 'tokenization', \"'s\", 'code', 'example', 'i', 'am', 'happy', 'tp', 'learn', 'about', 'machine', 'learning', ',', 'nlp', 'and', 'dl.', 'this', 'is', 'my', 'second', 'sentence', '!', 'Please', 'subscribe', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tree_tokenize)"
    ]
   },
   {
