--- a/stemming.ipynb
+++ b/stemming.ipynb
@@ -156,10 +156,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### snowball stemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import SnowballStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snowball = SnowballStemmer('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eating----->eat\n",
+      "eats----->eat\n",
+      "eaten----->eaten\n",
+      "writing----->write\n",
+      "writes----->write\n",
+      "programming----->program\n",
+      "programs----->program\n",
+      "history----->histori\n",
+      "finally----->final\n",
+      "finalize----->final\n"
+     ]
+    }
+   ],
+   "source": [
+    "for word in words: \n",
+    "    print(word+'----->'+snowball.stem(word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fairli', 'sportingli')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stemming.stem('fairly'), stemming.stem('sportingly')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('fair', 'sport')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "snowball.stem('fairly'), snowball.stem('sportingly')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
